Update spoon version and correctly use java 17